--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -20,8 +20,8 @@
     border-radius: 4px;
   }
   .heroes li.selected:hover {
-    background-color: rgb(15, 56, 238) !important;
-    color: white;
+    /* background-color: rgb(15, 56, 238) !important; */
+    /* color: white; */
   }
   .heroes li:hover {
     color: white;
@@ -59,7 +59,7 @@
   }
 
   li.selected.hulk {
-    background-color:black !important;
+    background-color:rgb(63, 58, 58) !important;
     color: limegreen;
   }
 
@@ -74,7 +74,7 @@
   }
 
   li.selected.daredevil {
-    background-color: rgb(88, 32, 32) !important;
+    background-color: rgb(165, 20, 20) !important;
     color: black;
   }
 
@@ -85,7 +85,7 @@
 
   li.selected.blackwidow {
     background-color: black !important;
-    color: rgb(161, 16, 16);
+    color: rgb(173, 24, 24);
   }
 
   li.selected.panther {
@@ -95,5 +95,5 @@
 
   li.selected.spiderman {
     background-color: red !important;
-    color: whitesmoke;
+    color: blue;
   }
