--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
-    <a routerLink="/heroes">Heroes</a>
+    <div><a routerLink="/dashboard">Dashboard</a></div>
+    <div><a routerLink="/heroes">Heroes</a></div>
 </nav>
 <router-outlet></router-outlet>
 <!-- <app-heroes></app-heroes> -->
