--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,11 @@
-<div class="hero-details" *ngIf="hero">
+<div *ngIf="hero" class="hero-details">
   <h2>{{hero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
   <br/>
   <div>
-    <label>Alias:
+    <label>Alias: 
       <input [(ngModel)]="hero.name" placeholder="name">
     </label>
   </div>
+  <button (click)="goBack()">Go Back</button>
 </div>
