--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -2,6 +2,12 @@
 
 h2 {
   text-align: center;
+  color: red;
+}
+
+.center {
+  text-align: center;
+  margin: 0 auto;
 }
 
 .heroes {
@@ -11,25 +17,33 @@ h2 {
   width: 15em;
 }
 
+.create-input {
+  margin: 10px;
+}
+
+.create-label {
+  text-decoration: underline;
+}
+
 .heroes li {
   cursor: pointer;
   position: relative;
   left: 0;
-  background-color: rgb(238, 238, 238);
+  background-color: rgb(216, 201, 201);
   margin: .75em;
   padding: 0;
-  height: 1.6em;
+  height: 1.75em;
   border-radius: 4px;
 }
 
 .heroes li:hover {
   color: white;
   background-color: rgb(188, 203, 235);
-  left: .1em;
+  /* left: .1em; */
 }
 
 .heroes a {
-  color: #888;
+  color: rgba(91, 88, 88, 0.735);
   text-decoration: none;
   position: relative;
   display: block;
@@ -56,8 +70,42 @@ h2 {
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+}
+
+button {
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  cursor: hand;
+  font-family: Arial;
+}
+ 
+button:hover {
+  background-color: #cfd8dc;
+}
+ 
+button.delete {
+  position: relative;
+  left: 195px;
+  top: -33px;
+  height: 2.5em;
+  background-color: gray !important;
+  color: white;
+}
+
+button.delete:hover {
+  position: relative;
+  left: 195px;
+  top: -33px;
+  height: 2.5em;
+  background-color: gray !important;
+  color: white;
 }
 
 .loki a:hover {
